3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/c_range.c: allow spells cast by number to also have options passed to
   them
Changelog: Commit the changelog entry for the last commit.
Brendan Lally 2006-01-10

 Spell listing support:
 allow 'spell_paths' to be sent to requestinfo, reply with number:path
 change return type of SP_level_spellpoint_cost to sint16
 add spellmon as a setup value, if it is set;
  send path attunement/repulsion/denial in stats
  send data about spells in addspell packets
  send updates to that data
 Affected files:
 common/living.c
 crossedit/stubs.c
 doc/Developers/protocol
 include/funcpoint.h, newclient.h, newserver.h, player.h, sockproto.h,
sproto.h
 random_maps/standalone.c
 server/apply.c, login.c, spell_util.c, init.c, loop.c, request.c
 --
server/c_range.c: allow cast/invoke and prepare commands to take item tags
   as well as spell names
Brendan Lally 2006-01-09

Apply modified patch #1396303 (add setting to disable stealing from players)
by Terry Brown. It adds a new option "no_player_stealing" to the settings
file. If set, it prevents players from stealing from other players. It
defaults to ON.
--
doc/settings: Add documentation for new setting.
include/global.h: Add new field to settings structure.
lib/settings: Add new option no_player_stealing.
server/init.c: In load_settings() recognizes the new option.
server/skills.c: In attempt_steal() prevent stealing from PLAYER if option is
   set.
Andreas Kirschbaum 2006-01-08

include/newserver.h, socket/{init.c,request.c}: Remove unused fields ext2 and
   ext_title_flag from NewSocket structure.
server/skills.c: Fix/improve feedback messages for stealing skill.