@@ -17,6 +17,10 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/c_object.c: allow the rename command to take tag of the item to be
+   renamed, so that clients can form rename commands properly.
+Brendan Lally 2006-01-11
+
 server/c_range.c: allow spells cast by number to also have options passed to
    them
 Changelog: Commit the changelog entry for the last commit.
